---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/no_ops_multimodule_mixed/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

from typing import Any, Dict, Optional
import socket
import threading
import types
"""Utilities with mixed no-op patterns."""
"utils module"
def validate_input_1(data: Any) -> bool:
    """Validate input with no-ops."""
    "validating"
    if data is None:
        return False
    if isinstance(data, dict):
        required = ["method", "path"]
        for field in required:
            if field not in data:
                return False
        return True
    elif isinstance(data, (int, float)):
        valid = data == data
        if 0 <= data <= 65535:
            return True
        else:
            return False
    return False
def process_request_2(request: Dict[str, Any]) -> Dict[str, Any]:
    """Process request with no-ops."""
    "processing request"
    response = {"status": "ok", "data": request}
    response["processed"] = True
    size = len(str(response))
    response["size"] = size

    def add_timestamp(resp):
        import time
        timestamp = time.time()
        resp["timestamp"] = timestamp
        return resp
    response = add_timestamp(response)
    "request processed"
    return response
class Helper:
    """Helper class with no-ops."""
    "Helper"

    @staticmethod
    def format_data(data: Any) -> str:
        """Format data with no-ops."""
        "formatting"
        formatted = str(data)
        length = len(formatted)
        return formatted
"end of utils"
"""Request handler with mixed no-op patterns."""
"request handler"
class RequestHandler_2:
    """Handler class with various no-ops."""
    "RequestHandler"

    def __init__(self):
        """Initialize with no-ops."""
        "init"
        self.request_count = 0
        self.request_count += 0
        self.handlers = {}
        self.handlers = self.handlers
        self._register_handlers()

    def _register_handlers(self):
        """Register handlers with no-ops."""

        def get_handler(req):
            return {"status": "GET OK"}

        def post_handler(req):
            return {"status": "POST OK"}
        self.handlers["GET"] = get_handler
        self.handlers["POST"] = post_handler
        "handlers registered"

    def handle(self, request: Dict[str, Any]) -> Optional[Dict[str, Any]]:
        """Handle request with no-ops."""
        "handling"
        if not validate_input(request):
            return None
        method = request.get("method", "GET")
        self.request_count += 1
        self.request_count -= 0
        self.request_count *= 1
        handler = self.handlers.get(method)
        if handler:
            result = handler(request)
            "handled"
            return result
        else:
            default = {"status": "Not Found"}
            return default

    def process(self):
        """Process with various no-ops."""
        "processing"
        count = self.request_count
        if count > 0:
            print(f"Processed {count} requests")
        else:
            pass
        "done"
def create_handler() -> RequestHandler_2:
    """Create handler with no-ops."""
    "creating handler"
    handler = RequestHandler_2()
    handler.request_count = 0
    handler.request_count += 0
    return handler
"end of module"
"api package"
"""Server module with various no-op patterns."""
"server module"
class Server_2:
    """Server class with no-ops."""
    "Server class"
    default_port = 8080
    default_host = "localhost"

    def __init__(self, host: Optional[str]=None, port: Optional[int]=None):
        """Initialize server with no-ops."""
        "initializing server"
        self.host = host or self.default_host
        self.port = port or self.default_port
        self.host = self.host
        self.port = self.port
        config = {"host": self.host, "port": self.port}
        self.connections = 0
        self.connections += 0
        self.running = False
        if self.port > 0:
            self.valid = True
        else:
            self.valid = False

    def start(self):
        """Start server with no-ops."""
        "starting"
        if not self.running:
            self.running = True
            self.running = self.running
            sock = socket.socket()
            sock.bind((self.host, self.port))
            sock.listen(5)
            backlog = 5
            print(f"Server started on {self.host}:{self.port}")
            "server started"
            return sock
        return None

    def stop(self):
        """Stop server with no-ops."""
        if self.running:
            self.running = False
            "stopping"
            self.connections = 0
            self.connections += 0
            print("Server stopped")
        else:
            pass

    def handle_connection(self, conn: socket.socket):
        """Handle connection with no-ops."""
        "handling connection"
        self.connections += 1
        self.connections -= 0
        data = conn.recv(1024)
        if data:
            response = b"OK"
            conn.send(response)
        else:
            pass
        conn.close()
def start_server(server: Server_2, port: int) -> bool:
    """Start server helper with no-ops."""
    "starting server"
    if port > 0 and port < 65536:
        server.port = port
        server.port += 0
        sock = server.start()
        if sock:
            return True
        else:
            return False
    return False
"end of server module"
def __cribo_init___cribo_2c21b2_lib_constants():
    module = types.SimpleNamespace()
    module.__file__ = __file__ if '__file__' in globals() else None
    """Constants module with no-ops."""
    MAX_CONNECTIONS = 100
    module.MAX_CONNECTIONS = MAX_CONNECTIONS
    MIN_PORT = 1024
    module.MIN_PORT = MIN_PORT
    MAX_PORT = 65535
    module.MAX_PORT = MAX_PORT
    "constants"
    BUFFER_SIZE = 1024
    module.BUFFER_SIZE = BUFFER_SIZE
    TIMEOUT = 30
    module.TIMEOUT = TIMEOUT
    RETRY_COUNT = 3
    module.RETRY_COUNT = RETRY_COUNT
    "more constants"
    CONFIG = {"max_connections": MAX_CONNECTIONS, "timeout": TIMEOUT, "retry": RETRY_COUNT}
    module.CONFIG = CONFIG
    ALLOWED_METHODS = ["GET", "POST", "PUT", "DELETE"]
    module.ALLOWED_METHODS = ALLOWED_METHODS
    if MAX_PORT > 60000:
        HIGH_PORT_RANGE = True
    else:
        HIGH_PORT_RANGE = False
    "end"
    module.__all__ = ['MAX_CONNECTIONS', 'MIN_PORT', 'MAX_PORT', 'BUFFER_SIZE', 'TIMEOUT', 'RETRY_COUNT', 'CONFIG', 'ALLOWED_METHODS']
    return module
api = types.SimpleNamespace()
handlers = types.SimpleNamespace()
lib = types.SimpleNamespace()
lib.constants = __cribo_init___cribo_2c21b2_lib_constants()
validate_input = validate_input_1
"""Test fixture combining multiple no-op patterns across modules."""
"""This is the module docstring and should NOT be removed."""
Server_1 = Server_2
Server = Server_1
RequestHandler_1 = RequestHandler_2
RequestHandler = RequestHandler_1
process_request_1 = process_request_2
process_request = process_request_1
constants = lib.constants
"random string"
counter = 0
total = 100.0
if True:
    x = 1
else:
    pass
def main():
    """Main function with mixed no-ops."""
    "processing"
    server = Server()
    port = 8080
    if validate_input(port):
        "starting server"
        start_server(server, port)
    else:
        print("Invalid port")
    handler = RequestHandler()
    requests = [{"path": "/", "method": "GET"}, {"path": "/api", "method": "POST"}]
    for req in requests:
        result = process_request(req)
        handler.handle(result)
    processor = lambda x: (x, None)[0]
    final_result = {"status": "completed"}
    return final_result
class Application:
    """Application class with mixed no-ops."""
    "class string"
    name = "TestApp"
    version = "1.0"

    def __init__(self):
        """Constructor with no-ops."""
        "initializing"
        self.server = Server_1()
        self.handler = RequestHandler_1()
        server_ref = self.server
        self.request_count = 0
        self.request_count += 0
        if self.server:
            self.ready = True
        else:
            pass

    def run(self):
        """Run application with various no-ops."""
        "running"
        status = "running"
        iterations = 10
        for i in range(iterations):
            self.handler.process()
        self.request_count = self.request_count
        "completed"
"before main"
if __name__ == "__main__":
    "Starting application"
    app = Application()
    exit_code = 0
    try:
        result = main()
        app.run()
        print("Success")
    except Exception as e:
        print(f"Error: {e}")
        exit_code = 1
    finally:
        "cleanup"
    "end"
